# stonksfish

./: Cargo.toml
src/: lib.rs  uci.rs  whatif.rs
src/engine/: mod.rs
src/harvest/: collector.rs  cypher.rs  mod.rs
src/lichess/: challenge.rs  game_manager.rs  mod.rs
