[package]
name = "stonksfish"
version = "0.3.0"
authors = ["Claus Martinsen <clauswrm@gmail.com>"]
edition = "2021"
description = "Chess engine with UCI support and multi-agent AI integration"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3

[dependencies]
chess = "3.2.0"
colored = "2.0.0"
dotenv = "0.15.0"
env_logger = "0.9.1"
licheszter = "0.1.0"
log = "0.4.17"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.21.2", features = ["full"] }
tokio-stream = "0.1.11"

# UCI binary (main.rs stays as lichess binary)
[[bin]]
name = "stonksfish-lichess"
path = "src/main.rs"

[[bin]]
name = "stonksfish-uci"
path = "src/bin/uci_main.rs"
